--- a/index.html
+++ b/index.html
@@ -91,13 +91,19 @@
 									
 									    <p>My current dissertation interests involve devising ways </p>
 
-									    <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-									    Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-									    Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-									    consequat etiam lorem ipsum dolor sit amet nullam. Phasellus quam turpis,
-									    feugiat sit amet ornare in, hendrerit in lectus. Praesent semper mod quis
-									    eget mi. Etiam eu ante risus. Aliquam erat volutpat. Aliquam luctus et
-									    mattis lectus sit amet pulvinar. Nam turpis nisi consequat etiam.</p>
+								            <p>Historically, evolutionary researchers have represented morphological 
+									    traits in ways that are the most convenient or practical for them to do. Because of 
+									    this pattern, traits are often grouped into one of two main classes: discrete or 
+									    continuous. A discrete trait may concern the number of segments in the antennae of an
+									    ant, while a continuous trait maybe something like the head-to-tail length of a 
+									    Cyprinid fish. In either case, however, the trait chosen is (often) something that is 
+									    intuitive and relatively easy to describe in words.</p>
+										
+									   <p>Organisms, however, are chaotic, fractaling things. Pleiotropy is ubiquitous, and 
+									    morphologies covary for all sorts of historical and developmental reasons. When we only describe
+								            traits that are easy for us to intuit, we are potentially ignoring a huge ocean of traits that 
+									    aren't.
+									   </p>
 
 									</article>
 
