--- a/Research.html
+++ b/Research.html
@@ -76,7 +76,7 @@
 										
 									   <div class="section clearfix">
 										   <p>
-									 	   So how does one measure something they cannot describe? This is what my research intends 
+									 	   How does one measure something they cannot describe? This is what my research intends 
 									 	   to do. We live in an age where machine-learning methods are becoming more and more powerful, 
 										   and are capable of many tasks from describing images to rediscovering scientific laws. However, 
 									           the field of evolutionary biology has been a bit behind on this front. For over a decade,
