--- a/Research.html
+++ b/Research.html
@@ -134,21 +134,20 @@
 										    <h3>Simulating Raw Data</h3>
 										    <img style="height:auto;width:50%; float:left;  margin: 15px 15px 0 0;" src="images/snailsim.jpeg" alt="" />
 
-								            <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-									    Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-									    Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-									    consequat etiam lorem ipsum dolor sit amet nullam. Phasellus quam turpis,
-									    feugiat sit amet ornare in, hendrerit in lectus. Praesent semper mod quis
-									    eget mi. Etiam eu ante risus. Aliquam erat volutpat. Aliquam luctus et
-									    mattis lectus sit amet pulvinar. Nam turpis nisi consequat etiam.</p>
-									
-									    <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-									    Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-									    Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-									    consequat etiam lorem ipsum dolor sit amet nullam. Phasellus quam turpis,
-									    feugiat sit amet ornare in, hendrerit in lectus. Praesent semper mod quis
-									    eget mi. Etiam eu ante risus. Aliquam erat volutpat. Aliquam luctus et
-									    mattis lectus sit amet pulvinar. Nam turpis nisi consequat etiam.</p>
+								            <p>Many machine learning methods, such as neural networks, operate as 
+									       "Black Boxes", making it difficult to understand their results and interpret their decisions.
+									       This issue is particularly problematic when trying to automatically construct biological	    
+									       traits, which are themselves extremely complex, and are often constructed and used 
+									       differently by different researchers.</p>
+									    <p>When developing more traditional methods for studying evolution, it is common to test these models
+									       on artificial data simulated under a known evolutionary process, such as Brownian Motion. To help assess
+									       machine learning models that operate on raw data such as images, I've developed <a href="https://github.com/calcharp/TraitBlender/tree/main">TraitBlender</a>
+									       a Blender addon and workflow for simulating raw data under known processes. Simply put, a researcher can import tabular
+									       data simulated in R or Python, map it to a function for simulating a 3D object, and then render museum-specimen style images
+									       for every species present in the tabular data, creating an entire image dataset of taxa that do not actually exist,
+									       but whos morphological traits are well-defined and whos evolutionary history is perfectly documented.
+									    </p>
+										   
 									   </div>
 
 									   <div class="section clearfix">
