--- a/Research.html
+++ b/Research.html
@@ -141,7 +141,8 @@
 									       differently by different researchers.</p>
 									    <p>When developing more traditional methods for studying evolution, it is common to test these models
 									       on artificial data simulated under a known evolutionary process, such as Brownian Motion. To help assess
-									       machine learning models that operate on raw data such as images, I've developed <a href="https://github.com/calcharp/TraitBlender/tree/main">TraitBlender</a>
+									       machine learning models that operate on raw data such as images, I've developed <a href="https://github.com/calcharp/TraitBlender/tree/main" style="color: blue; text-decoration: none;">TraitBlender</a>,
+
 									       a Blender addon and workflow for simulating raw data under known processes. Simply put, a researcher can import tabular
 									       data simulated in R or Python, map it to a function for simulating a 3D object, and then render museum-specimen style images
 									       for every species present in the tabular data, creating an entire image dataset of taxa that do not actually exist,
