work on background

--- a/Research.html
+++ b/Research.html
@@ -92,21 +92,21 @@
 										    <h3>The Imageomics Institute</h3>
 										    <img style="height:auto;width:45%; float:left;  margin: 15px 15px 0 0;" src="images/imageomics.jpg" alt="" />
 
-									    <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-									    Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-									    Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-									    consequat etiam lorem ipsum dolor sit amet nullam. Phasellus quam turpis,
-									    feugiat sit amet ornare in, hendrerit in lectus. Praesent semper mod quis
-									    eget mi. Etiam eu ante risus. Aliquam erat volutpat. Aliquam luctus et
-									    mattis lectus sit amet pulvinar. Nam turpis nisi consequat etiam.</p>
-									
-									    <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-									    Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-									    Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-									    consequat etiam lorem ipsum dolor sit amet nullam. Phasellus quam turpis,
-									    feugiat sit amet ornare in, hendrerit in lectus. Praesent semper mod quis
-									    eget mi. Etiam eu ante risus. Aliquam erat volutpat. Aliquam luctus et
-									    mattis lectus sit amet pulvinar. Nam turpis nisi consequat etiam.</p>
+									    <p>My work is centered around Imageomics, a new area of research that focuses on leveraging
+										   knowledge-guided machine learning algorithms to answer difficult biological questions. While this 
+										   idea can be interpreted and executed in many ways, as a macroevolutionary researcher, I am interested 
+										   in incorporating structures like phylogenies and ontologies to hard-bake established Evo-Devo
+										   knowledge into the process of phenotypic character construction. 
+										</p>
+									    <p>Generally Speaking, "character construction" refers to the process of identifying, defining, and 
+										   categorizing the traits or features of organisms that are relevant for phylogenetic analysis or 
+										   other comparative studies. Practically all of our models for understanding evolution require some
+										   sort of prerequisite character construction step, but there is no established generic framwork for 
+										   undergoing this process. This is because doing so would be almost impossible with past technology, as researchers 
+										   are often asking very different questions, and finding variables that can be leveraged to answer those
+										   questions requires a knowledge of the broader world that something like a more standard GLM
+										   generally cannot have. 
+										</p>
 									   </div>
 
 									   <div class="section clearfix">
