--- a/Research.html
+++ b/Research.html
@@ -152,16 +152,10 @@
 									   </div>
 
 									   <div class="section clearfix">
-										    <h3>Ontologies for Knowledge-Guided Inference</h3>
+										    <h3>Incorporating Structured Knowledge into Inference</h3>
 										    <img style="height:auto;width:50%; float:left;  margin: 15px 15px 0 0;" src="images/phenoscape.png" alt="" />
 
-									    <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-									    Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-									    Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-									    consequat etiam lorem ipsum dolor sit amet nullam. Phasellus quam turpis,
-									    feugiat sit amet ornare in, hendrerit in lectus. Praesent semper mod quis
-									    eget mi. Etiam eu ante risus. Aliquam erat volutpat. Aliquam luctus et
-									    mattis lectus sit amet pulvinar. Nam turpis nisi consequat etiam.</p>
+									    <p>In recent years, data-driven approaches to </p>
 									
 									    <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
 									    Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
