--- a/Research.html
+++ b/Research.html
@@ -132,7 +132,7 @@
 
 									   <div class="section clearfix">
 										    <h3>Simulating Raw Data</h3>
-										    <img style="height:auto;width:50%; float:left;  margin: 15px 15px 0 0;" src="images/snailsim.jpeg" alt="" />
+										    <img style="height:auto;width:50%; float:left;  margin: 15px 15px 0 0;" src="images/t1_Top_0.png" alt="" />
 
 								            <p>Many machine learning methods, such as neural networks, operate as 
 									       "Black Boxes", making it difficult to understand their results and interpret their decisions.
