--- a/Research.html
+++ b/Research.html
@@ -113,22 +113,13 @@
 										    <h3>Automated Character Construction with Deep Learning</h3>
 										    <img style="height:auto;width:50%; float:left;  margin: 15px 15px 0 0;" src="images/phylonn.png" alt="" />
 
-									    <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-									    Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-									    Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-									    consequat etiam lorem ipsum dolor sit amet nullam. Phasellus quam turpis,
-									    feugiat sit amet ornare in, hendrerit in lectus. Praesent semper mod quis
-									    eget mi. Etiam eu ante risus. Aliquam erat volutpat. Aliquam luctus et
-									    mattis lectus sit amet pulvinar. Nam turpis nisi consequat etiam.</p>
-									
-									    <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-									    Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-									    Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-									    consequat etiam lorem ipsum dolor sit amet nullam. Phasellus quam turpis,
-									    feugiat sit amet ornare in, hendrerit in lectus. Praesent semper mod quis
-									    eget mi. Etiam eu ante risus. Aliquam erat volutpat. Aliquam luctus et
-									    mattis lectus sit amet pulvinar. Nam turpis nisi consequat etiam.</p>
-									   </div>
+									    <p>The field of deep learning is advancing rapidly, and with it has come new tools for automated discovery, 
+										    with systems such as Alphafold and Deepmind's FunSearch allowing users to pull new knowledge directly 
+										    from high-dimensional data. I want to use similar tools to uncover the developmental processes underlying evolution, 
+										    directly from raw data such as images or videos. Using Knowledge-Guided Machine Learning (KGML) approaches, 
+										    I want to constrain these models so that their predictions are informed by formally structured knowledge such as 
+										    phylogeny or ontogenic processes, so that they can develop meaningful interpretations of the dynamic 
+										    processes underlying evolution.</p>
 
 									   <div class="section clearfix">
 										    <h3>Simulating Raw Data</h3>
