--- a/Research.html
+++ b/Research.html
@@ -116,7 +116,8 @@
 									    <p>The field of deep learning is advancing rapidly, and with it has come new tools for automated discovery, 
 										    with systems such as Alphafold and Deepmind's FunSearch allowing users to pull new knowledge directly 
 										    from high-dimensional data. I want to use similar tools to uncover the developmental processes underlying evolution, 
-										    directly from raw data such as images or videos. Using Knowledge-Guided Machine Learning (KGML) approaches, 
+										    directly from raw data such as images or videos. </p>
+									    <p>Using Knowledge-Guided Machine Learning (KGML) approaches, 
 										    I want to constrain these models so that their predictions are informed by formally structured knowledge such as 
 										    phylogeny or ontogenic processes, so that they can develop meaningful interpretations of the dynamic 
 										    processes underlying evolution.</p>
