--- a/Research.html
+++ b/Research.html
@@ -140,15 +140,17 @@
 										    <h3>Incorporating Structured Knowledge into Inference</h3>
 										    <img style="height:auto;width:50%; float:left;  margin: 15px 15px 0 0;" src="images/phenoscape.png" alt="" />
 
-									    <p>In recent years, data-driven approaches to </p>
+									    <p>Whenever we make models, we are attempting to codify statements about the world. 
+										For a model to be meaningful, however, the assumptions we put into it must be reflective 
+										    of our assumptions about external reality. When we are dealing with traits that have 
+										    complex, nonlinear dependencies on each other, doing this can be very difficult.</p>
 									
-									    <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-									    Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-									    Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-									    consequat etiam lorem ipsum dolor sit amet nullam. Phasellus quam turpis,
-									    feugiat sit amet ornare in, hendrerit in lectus. Praesent semper mod quis
-									    eget mi. Etiam eu ante risus. Aliquam erat volutpat. Aliquam luctus et
-									    mattis lectus sit amet pulvinar. Nam turpis nisi consequat etiam.</p>
+									    <p>I've contributed to projects that address this problem by incorporating biological knowledge 
+										    into models directly in the form of ontologies, which are knowledge graphs that specifify
+										    the hierarchical relationships / dependencies between traits. </p>
+
+								 	    <p>The RPhenoscate Paper</p>
+									    <p>Informationabout the SCATE (Semantic Comparative Analysis of Trait Evolution) project</p>
 									   </div>
 
 									</article>
