--- a/Research.html
+++ b/Research.html
@@ -71,19 +71,19 @@
 									<!-- Content -->
 									<article>
 									    <header style="margin-bottom:20px;"> <!-- class="major"> -->
-									        <h2>How Do We Handle Phenotypic Complexity?</h2>
+									        <h2>Phenotypic Evolution in an Age of Machine Learning</h2>
 									   </header>
 										
 									   <div class="section clearfix">
 										   <p>
-									 	   How does one measure something they cannot describe? This is what my research intends 
-									 	   to do. We live in an age where machine-learning methods are becoming more and more powerful, 
-										   and are capable of many tasks from describing images to rediscovering scientific laws. However, 
-									           the field of evolutionary biology has been a bit behind on this front. For over a decade,
-										   there have been more and more calls to take advantage of the "Big Data" that is available in modern
-									           times. Now that this data is ubiquitous and large-scale computing power is commonplace, its
-										   time to not only rethink how we interact with data, but also how we can use data to rethink
-										   the process of discovery itself.
+									 	   The field of deep learning is advancing rapidly, and with it has come new tools for automated discovery, 
+											   with systems such as Alphafold and Deepmind's FunSearch allowing users to pull new knowledge directly
+											   from high-dimensional data. I want to use similar tools to uncover the developmental processes underlying
+											   evolution, directly from raw data such as images or videos, and informed by pre-existing biological knowledge. 
+											   With the massive datasets currently available to many researchers, Phenomics allows us to processes information 
+											   with higher volume and dimensionality than was ever before possible. I want to take this a step further, and 
+											   use machine learning to not only process more information than ever before, but also to rethink how our assumptions 
+											   about the world interact with our data and models to begin with.
 									 	   </p>
 									   </div>	
 										   
