--- a/Research.html
+++ b/Research.html
@@ -137,12 +137,19 @@
 										    <h3>Simulating Raw Data</h3>
 										    <img style="height:auto;width:50%; float:left;  margin: 15px 15px 0 0;" src="images/t1_Top_0.png" alt="" />
 
-								            <p>Many machine learning methods, such as neural networks, operate as 
-									       "Black Boxes", making it difficult to understand their results and interpret their decisions.
-									       This issue is particularly problematic when trying to automatically construct biological	    
-									       traits, which are themselves extremely complex, and are often constructed and used 
-									       differently by different researchers.</p>
-									    <p><a href="https://github.com/calcharp/TraitBlender/tree/main" target="_blank">TraitBlender</a>.
+								            <p>Most phenotypic traits are complex characters, whos evolutionary paths are determined by 
+										dynamic changes in regulatory networks with various degrees of integration, complexity, and ... .
+										Deep learning may allow us to uncover these sophisticated processes so that they can be better represented
+										in our models, but many deep learning algorithms are black boxes, and validating the performance of black-box 
+										    models that uncover unknown processeses in irregularly structured data is incredibly difficult.
+									    </p>
+									    <p>One way to address this issue is by instead validating the ability of these models to discover known processes 
+										    through simulated raw data, which can be done with the 
+										    <a href='https://github.com/calcharp/TraitBlender' target='_blank' style='color:blue;'>TraitBlender</a> pipeline I developed. 
+										    TraitBlender allows users to represent theoretical morphospaces as python functions, which can be be used to evolve imaginary
+										    taxa on a simulated phylogeny. TraitBlender can then take 'museum-specimen' style photos of these imaginary taxa in bulk, 
+										    allowing users to create huge synthetic image datasets where the evolutionary and developmental processes are known in their entireties. 
+									    </p>
 
 										   
 									   </div>
