--- a/Research.html
+++ b/Research.html
@@ -93,21 +93,21 @@
 										    <h3>The Imageomics Institute</h3>
 										    <img style="height:auto;width:45%; float:left;  margin: 15px 15px 0 0;" src="images/imageomics.jpg" alt="" />
 
-									    <p>My work is centered around Imageomics, a new area of research that focuses on leveraging
-										   knowledge-guided machine learning algorithms to answer difficult biological questions. While this 
-										   idea can be interpreted and executed in many ways, as a macroevolutionary researcher, I am interested 
-										   in incorporating structures like phylogenies and ontologies to hard-bake established Evo-Devo
-										   knowledge into the process of phenotypic character construction. 
+									    <p>My work is centered around <a href='https://imageomics.osu.edu/' target='_blank' style='color:blue;'>Imageomics</a>, 
+										    an area of research that uses images and machine-learning algorithms to study 
+										    biology. More specifically, I am focused on integrating pre-existing biological knowledge and interpretable 
+										    automated-discovery techniques to find new ways of studying evolutionary morphology.
 										</p>
-									    <p>Generally Speaking, "character construction" refers to the process of identifying, defining, and 
-										   categorizing the traits or features of organisms that are relevant for phylogenetic analysis or 
-										   other comparative studies. Practically all of our models for understanding evolution require some
-										   sort of prerequisite character construction step, but there is no established generic framwork for 
-										   undergoing this process. This is because doing so would be almost impossible with past technology, as researchers 
-										   are often asking very different questions, and finding variables that can be leveraged to answer those
-										   questions requires a knowledge of the broader world that something like a more standard GLM
-										   generally cannot have. 
-										</p>
+									    <p>The conclusions we can draw from our data and our models are dependent on both the ways our data interacts 
+										    with our models and the manner in which our data was collected to begin with. This complication can make 
+										    studying morphology very difficult, as the way traits have historically been defined through character 
+										    construction has been dependant on particular experts forming particular questions, which often may not 
+										    adequately capture the complex evolutionary and developmental processes that actually drive morphological evolution.
+									    </p>
+									    <p>Imageomics provides a possible way to get around this, and neural-networks are often able to pick up on complex patterns
+										    that humans (even experts) might miss. By grounding them in biological knowledge and enforcing sparce model outputs
+										    that encourage inductive inference, we can potentially bypass the interpretability problems associated with black-box
+										    models and make character construction more reproducible and more robust to complex evolutionary dynamics. </p>
 									   </div>
 
 									   <div class="section clearfix">
