--- a/Research.html
+++ b/Research.html
@@ -144,8 +144,8 @@
 										    into models directly in the form of ontologies, which are knowledge graphs that specifify
 										    the hierarchical relationships / dependencies between traits. </p>
 
-								 	    <a href='https://besjournals.onlinelibrary.wiley.com/doi/full/10.1111/2041-210X.14210' target='_blank' style='color:blue;'>The RPhenscate Paper</a> 
-									    <a href='https://scate.phenoscape.org/' target='_blank' style='color:blue;'>The SCATE (Semantic Comparative Analysis of Trait Evolution) Project</a>
+								 	    <a href='https://besjournals.onlinelibrary.wiley.com/doi/full/10.1111/2041-210X.14210' target='_blank' style='color:blue;'>The RPhenoscate Paper</a> 
+									    | <a href='https://scate.phenoscape.org/' target='_blank' style='color:blue;'>The SCATE (Semantic Comparative Analysis of Trait Evolution) Project</a>
                                     </div>
                                 </div>
                             </article>
