--- a/Research.html
+++ b/Research.html
@@ -63,6 +63,23 @@
                         <div id="content">
                             <!-- Content -->
                             <article>
+				    <header style="margin-bottom:20px;"> <!-- class="major"> -->
+					<h2>Phenotypic Evolution in an Age of Machine Learning</h2>
+				    </header>
+										
+									   <div class="section clearfix">
+										   <p>
+									 	   The field of deep learning is advancing rapidly, and with it has come new tools for automated discovery, 
+											   with systems such as <a href='https://www.nature.com/articles/s41586-021-03819-2' target='_blank' style='color:blue;'>AlphaFold</a> and
+											   <a href='https://www.nature.com/articles/s41586-023-06924-6' target='_blank' style='color:blue;'>DeepMind's FunSearch</a> 
+											   allowing users to pull new knowledge directly from high-dimensional data. I want to use similar tools to uncover the 
+											   developmental processes underlying evolution, directly from raw data such as images or videos, and informed by pre-existing 
+											   biological knowledge. With the massive datasets currently available to many researchers, Phenomics allows us to processes 
+											   information with higher volume and dimensionality than was ever before possible. I want to take this a step further, and use 
+											   machine learning to not only process more information than ever before, but also to rethink how our assumptions about the world 
+											   interact with our data and models to begin with.
+									 	   </p>
+									   </div>	
                                 <!-- Section 1 -->
                                 <div class="section clearfix">
                                     <img style="height:auto;width:45%;" src="images/imageomics.jpg" alt="" />
