--- a/Research.html
+++ b/Research.html
@@ -132,8 +132,8 @@
                                     <img style="height:auto;width:30%;" src="images/t1_Top_0.png" alt="" />
                                     <div>
                                         <h3>Simulating Raw Data</h3>
-									    <p> Most phenotypic traits are complex characters, whos evolutionary paths are determined by 
-										dynamic changes in regulatory networks with various degrees of integration, complexity, and ... .
+									    <p> Most phenotypic traits are complex characters, whose evolutionary paths are determined by 
+										dynamic changes in regulatory networks with various degrees of integration, complexity, and canalization.
 										Deep learning may allow us to uncover these sophisticated processes so that they can be better represented
 										in our models, but many deep learning algorithms are black boxes, and validating the performance of black-box 
 										    models that uncover unknown processeses in irregularly structured data is incredibly difficult.
