--- a/Software.html
+++ b/Software.html
@@ -72,25 +72,25 @@
 									<article>
 									   <div class="section clearfix">
 										    <h3>TraitBlender</h3>
-									    <p>A Pipeline for Simulating Image Datasets of Imaginary Taxa   |    <a style="text-decoration:none" target="_blank" href="https://github.com/calcharp/TraitBlender" style='color:blue;'>Link</a>    |    <a style="text-decoration:none" target="_blank" style='color:blue;' href="https://doi.org/10.1101/2023.02.19.528613">Publication</a>
+									    <p>A Pipeline for Simulating Image Datasets of Imaginary Taxa   |    <a style="text-decoration:none;color:blue;" target="_blank" href="https://github.com/calcharp/TraitBlender">Link</a>    |    <a style="text-decoration:none;color:blue;" target="_blank" href="https://doi.org/10.1101/2023.02.19.528613">Publication</a>
 									    </p>
 									   </div>
 															   
 									   <div class="section clearfix">
 										    <h3>RPhenoscate</h3>
-									    <p>An R package for semantic-aware evolutionary analyses of anatomical traits    |    <a style="text-decoration:none" target="_blank" href="https://github.com/uyedaj/rphenoscate" style='color:blue;'>Link</a>    |    <a style="text-decoration:none" target="_blank" style='color:blue;' href="https://doi.org/10.1101/2023.02.19.528613">Publication</a>
+									    <p>An R package for semantic-aware evolutionary analyses of anatomical traits    |    <a style="text-decoration:none;color:blue;" target="_blank" href="https://github.com/uyedaj/rphenoscate">Link</a>    |    <a style="text-decoration:none;color:blue;" target="_blank" href="https://doi.org/10.1101/2023.02.19.528613">Publication</a>
 									    </p>
 									   </div>
 
 									   <div class="section clearfix">
 										    <h3>Revticulate</h3>
-									    <p>An R language interface for interaction with RevBayes    |    <a style="text-decoration:none" target="_blank" href="https://github.com/revbayes/Revticulate" style='color:blue;'>Link</a>    |    <a style="text-decoration:none" target="_blank" style='color:blue;' href="https://doi.org/10.1111/2041-210X.13852">Publication</a></p>
+									    <p>An R language interface for interaction with RevBayes    |    <a style="text-decoration:none;color:blue;" target="_blank" href="https://github.com/revbayes/Revticulate">Link</a>    |    <a style="text-decoration:none;color:blue;" target="_blank" href="https://doi.org/10.1111/2041-210X.13852">Publication</a></p>
 									   </div>
 
 									   <div class="section clearfix">
 										    <h3>SISRS</h3>
 								            <p>A Python-based pipeline for identifying phylogenetically informative sites from 
-										 next-generation whole-genome sequencing of multiple species    |    <a style="text-decoration:none" target="_blank" href="https://github.com/SchwartzLabURI/SISRS" style='color:blue;'>Link</a></p>
+										 next-generation whole-genome sequencing of multiple species    |    <a style="text-decoration:none;color:blue;" target="_blank" href="https://github.com/SchwartzLabURI/SISRS">Link</a></p>
 									   </div>
 										   
 									</article>
