--- a/Publications.html
+++ b/Publications.html
@@ -72,13 +72,13 @@
 
 										<article>
 											<p>
-										        	<strong >Charpentier, C. P.</strong> & Wright, A. M. (2022). Revticulate: An R framework for interaction with RevBayes. Methods in Ecology and Evolution, 13, 1177– 1184. https://doi.org/10.1111/2041-210X.13852. <a href="pdfs/charpentier2022.pdf" target="_blank" style='color:blue;'>PDF</a>	
+										        	<strong >Charpentier, C. P.</strong> & Wright, A. M. (2022). Revticulate: An R framework for interaction with RevBayes. Methods in Ecology and Evolution, 13, 1177– 1184. https://doi.org/10.1111/2041-210X.13852. <a href="pdfs/charpentier2022.pdf" target="_blank" style='text-decoration:none;color:blue;'>PDF</a>	
 											</p>
 											<p>
-												Porto, D. S., Tarasov, S., <strong >Charpentier, C.</strong>, Lapp, H., Balhoff, J. P., Vision, T. J., Dahdul, W. M., Mabee, P. M., & Uyeda, J. (2023). rphenoscate: An R package for semantic-aware evolutionary analyses of anatomical traits. Cold Spring Harbor Laboratory. https://doi.org/10.1101/2023.02.19.528613. <a href="pdfs/porto2023.pdf" target="_blank" style='color:blue;'>PDF</a>
+												Porto, D. S., Tarasov, S., <strong >Charpentier, C.</strong>, Lapp, H., Balhoff, J. P., Vision, T. J., Dahdul, W. M., Mabee, P. M., & Uyeda, J. (2023). rphenoscate: An R package for semantic-aware evolutionary analyses of anatomical traits. Cold Spring Harbor Laboratory. https://doi.org/10.1101/2023.02.19.528613. <a href="pdfs/porto2023.pdf" target="_blank" style='text-decoration:none;color:blue;'>PDF</a>
 											</p>
 											<p>
-												Elhamod, M., Khurana, M., Manogaran, H., Uyeda, J., Balk, M., Dahdul, W., Bakis, Y., Bart, H., Mabee, P., Lapp, H., Balhoff, J., <strong>Charpentier, C.</strong>, Carlyn, D., Chao, W.-L., Stewart, C., Rubenstein, D., Berger-Wolf, T., & Karpatne, A. (2023). Discovering Novel Biological Traits From Images Using Phylogeny-Guided Neural Networks. Knowledge Discovery and Data Mining 2023 (Conference). DOI: https://doi.org/10.48550/arXiv.2306.03228. <a href="pdfs/elmahod2023.pdf" target="_blank" style='color:blue;'>PDF</a> 
+												Elhamod, M., Khurana, M., Manogaran, H., Uyeda, J., Balk, M., Dahdul, W., Bakis, Y., Bart, H., Mabee, P., Lapp, H., Balhoff, J., <strong>Charpentier, C.</strong>, Carlyn, D., Chao, W.-L., Stewart, C., Rubenstein, D., Berger-Wolf, T., & Karpatne, A. (2023). Discovering Novel Biological Traits From Images Using Phylogeny-Guided Neural Networks. Knowledge Discovery and Data Mining 2023 (Conference). DOI: https://doi.org/10.48550/arXiv.2306.03228. <a href="pdfs/elmahod2023.pdf" target="_blank" style='text-decoration:none;color:blue;'>PDF</a> 
 											</p>
 											
 										</article>
