--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 						<!-- Banner -->
 							<div id="banner">
 								<h2>Caleb Charpentier</h2>
+								<h3>PhD Student in Uyeda Lab at Virginia Tech</h3>
 							</div>
 						
 						<!-- Header -->
