--- a/index.html
+++ b/index.html
@@ -83,16 +83,16 @@
 									        <!-- <p>Sidebars are not welcome here</p> -->
 									   </header>
 
-									    <span><img style="height:auto; width:40%; float:right; margin-left:5%;" src="images/self.jpg" alt="" /></span> <!--class="image featured"-->
+									    <span><img style="height:auto; width:30%; float:right; margin-left:5%;" src="images/self.jpg" alt="" /></span> <!--class="image featured"-->
 									
-<p>I'm Caleb Charpentier, a Ph.D. student in <a href='https://www.uyedalab.com/' target='_blank' style='color:blue;'>Uyeda Lab</a> at Virginia Tech. I'm interested in the evolution of morphology,
+<p>I'm Caleb Charpentier, a Ph.D. student in <a href='https://www.uyedalab.com/' target='_blank' style='text-decoration:none;color:blue;'>Uyeda Lab</a> at Virginia Tech. I'm interested in the evolution of morphology,
 	and how we can incorporate Knowledge-Guided Machine Learning (KGML) and automated discovery techniques 
 	to rethink the ways that we study complex traits across time scales.
 </p>
 <p>										
 I'm currently in my second year of my program, and am mostly focused on developing a pipeline to simulate raw data, 
 	such as images of imaginary taxa, that can be used to assess the performance of neural networks that are intended 
-	to discover traits. The pipeline is called TraitBlender, and can be found <a href='https://github.com/calcharp/TraitBlender' target='_blank' style='color:blue;'>here</a>.
+	to discover traits. The pipeline is called TraitBlender, and can be found <a href='https://github.com/calcharp/TraitBlender' target='_blank' style='text-decoration:none;color:blue;'>here</a>.
 </p>
 <p>
 In the past, the way we constructed characters was often limited by expert knowledge / interest, which 
