--- a/Research.html
+++ b/Research.html
@@ -70,8 +70,8 @@
 									   <div class="section clearfix">
 										   <p>
 									 	   The field of deep learning is advancing rapidly, and with it has come new tools for automated discovery, 
-											   with systems such as <a href='https://www.nature.com/articles/s41586-021-03819-2' target='_blank' style='color:blue;'>AlphaFold</a> and
-											   <a href='https://www.nature.com/articles/s41586-023-06924-6' target='_blank' style='color:blue;'>DeepMind's FunSearch</a> 
+											   with systems such as <a href='https://www.nature.com/articles/s41586-021-03819-2' target='_blank' style='text-decoration:none;color:blue;'>AlphaFold</a> and
+											   <a href='https://www.nature.com/articles/s41586-023-06924-6' target='_blank' style='text-decoration:none;color:blue;'>DeepMind's FunSearch</a> 
 											   allowing users to pull new knowledge directly from high-dimensional data. I want to use similar tools to uncover the 
 											   developmental processes underlying evolution, directly from raw data such as images or videos, and informed by pre-existing 
 											   biological knowledge. With the massive datasets currently available to many researchers, Phenomics allows us to processes 
@@ -85,7 +85,7 @@
                                     <img style="height:auto;width:45%;" src="images/imageomics.jpg" alt="" />
                                     <div>
                                         <h3>The Imageomics Institute</h3>
-                                        				        <p>My work is centered around <a href='https://imageomics.osu.edu/' target='_blank' style='color:blue;'>Imageomics</a>, 
+                                        				        <p>My work is centered around <a href='https://imageomics.osu.edu/' target='_blank' style='text-decoration:none;color:blue;'>Imageomics</a>, 
 										    an area of research that uses images and machine-learning algorithms to study 
 										    biology. More specifically, I am focused on integrating pre-existing biological knowledge and interpretable 
 										    automated-discovery techniques to find new ways of studying evolutionary morphology.
@@ -123,7 +123,7 @@
 										
 									   </p>
 									   <p>
-										<a href='https://arxiv.org/pdf/2306.03228.pdf' target='_blank' style='color:blue;'>The PhyloNN Paper</a> 
+										<a href='https://arxiv.org/pdf/2306.03228.pdf' target='_blank' style='text-decoration:none;color:blue;'>The PhyloNN Paper</a> 
 									    </p>
                                     </div>
                                 </div>
@@ -140,7 +140,7 @@
 									    </p>
 									    <p>One way to address this issue is by instead validating the ability of these models to discover known processes 
 										    through simulated raw data, which can be done with the 
-										    <a href='https://github.com/calcharp/TraitBlender' target='_blank' style='color:blue;'>TraitBlender</a> pipeline I developed. 
+										    <a href='https://github.com/calcharp/TraitBlender' target='_blank' style='text-decoration:none;color:blue;'>TraitBlender</a> pipeline I developed. 
 										    TraitBlender allows users to represent theoretical morphospaces as python functions, which can be be used to evolve imaginary
 										    taxa on a simulated phylogeny. TraitBlender can then take 'museum-specimen' style photos of these imaginary taxa in bulk, 
 										    allowing users to create huge synthetic image datasets where the evolutionary and developmental processes are known in their entireties. 
@@ -161,8 +161,8 @@
 										    into models directly in the form of ontologies, which are knowledge graphs that specifify
 										    the hierarchical relationships / dependencies between traits. </p>
 
-								 	    <a href='https://besjournals.onlinelibrary.wiley.com/doi/full/10.1111/2041-210X.14210' target='_blank' style='color:blue;'>The RPhenoscate Paper</a> 
-									    | <a href='https://scate.phenoscape.org/' target='_blank' style='color:blue;'>The SCATE (Semantic Comparative Analysis of Trait Evolution) Project</a>
+								 	    <a href='https://besjournals.onlinelibrary.wiley.com/doi/full/10.1111/2041-210X.14210' target='_blank' style='text-decoration:none;color:blue;'>The RPhenoscate Paper</a> 
+									    | <a href='https://scate.phenoscape.org/' target='_blank' style='text-decoration:none;color:blue;'>The SCATE (Semantic Comparative Analysis of Trait Evolution) Project</a>
                                     </div>
                                 </div>
                             </article>
