--- a/Software.html
+++ b/Software.html
@@ -72,7 +72,7 @@
 									<article>
 									   <div class="section clearfix">
 										    <h3>TraitBlender</h3>
-									    <p>A Pipeline for Simulating Image Datasets of Imaginary Taxa   |    <a style="text-decoration:none;color:blue;" target="_blank" href="https://github.com/calcharp/TraitBlender">Link</a>    |    <a style="text-decoration:none;color:blue;" target="_blank" href="https://doi.org/10.1101/2023.02.19.528613">Publication</a>
+									    <p>A pipeline for simulating image datasets of imaginary taxa   |    <a style="text-decoration:none;color:blue;" target="_blank" href="https://github.com/calcharp/TraitBlender">Link</a>    |    <a style="text-decoration:none;color:blue;" target="_blank" href="https://doi.org/10.1101/2023.02.19.528613">Publication</a>
 									    </p>
 									   </div>
 															   
