--- a/Research.html
+++ b/Research.html
@@ -93,7 +93,7 @@
 									    <p>The conclusions we can draw from our data and our models are dependent on both the ways our data interacts 
 										    with our models and the manner in which our data was collected to begin with. This complication can make 
 										    studying morphology very difficult, as the way traits have historically been defined through character 
-										    construction has been dependant on particular experts forming particular questions, which often may not 
+										    construction has been dependent on particular experts forming particular questions, which often may not 
 										    adequately capture the complex evolutionary and developmental processes that actually drive morphological evolution.
 									    </p>
 									    <p>Imageomics provides a possible way to get around this, and neural-networks are often able to pick up on complex patterns
