--- a/Research.html
+++ b/Research.html
@@ -94,10 +94,10 @@
 										    with our models and the manner in which our data was collected to begin with. This complication can make 
 										    studying morphology very difficult, as the way traits have historically been defined through character 
 										    construction has been dependent on particular experts asking particular questions, which often may not 
-										    adequately capture the complex evolutionary and developmental processes that actually drive morphological evolution.
+										    adequately capture the dynamic processes that actually drive evolution more broadly.
 									    </p>
-									    <p>Imageomics provides a possible way to get around this, and neural-networks are often able to pick up on complex patterns
-										    that humans (even experts) might miss. By grounding them in biological knowledge and enforcing sparce model outputs
+									    <p>Imageomics provides a possible way to get around this, as neural-networks are often able to pick up on complex patterns
+										    that humans (even experts) might miss. By grounding them in biological knowledge and enforcing sparse model outputs
 										    that encourage inductive inference, we can potentially bypass the interpretability problems associated with black-box
 										    models and make character construction more reproducible and more robust to complex evolutionary dynamics. </p>
                                     </div>
