--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 											        <li><a href="Research.html">Research</a></li>
 												<li><a href="Publications.html">Publications</a></li>
 												<li><a href="Software.html">Software</a></li>
+												<li><a href="Software.html">GoodReads</a></li>
 												<li><a href="pdfs/CV_website.pdf" target="_blank">CV</a></li>
 											</ul>
 										</nav>
