--- a/Research.html
+++ b/Research.html
@@ -49,6 +49,7 @@
                                 <li><a href="Publications.html">Publications</a></li>
                                 <li><a href="Software.html">Software</a></li>
                                 <li><a href="pdfs/CV_website.pdf" target="_blank">CV</a></li>
+				<li><a href="Goodreads.html">GoodReads</a></li>
                             </ul>
                         </nav>
                     </div>
