--- a/Software.html
+++ b/Software.html
@@ -53,6 +53,7 @@
 												<li><a href="Publications.html">Publications</a></li>
 												<li class="current_page_item"><a href="Software.html">Software</a></li>
 												<li><a href="pdfs/CV_website.pdf" target="_blank">CV</a></li>
+												<li><a href="Goodreads.html">GoodReads</a></li>
 											</ul>
 										</nav>
 
