--- a/Research.html
+++ b/Research.html
@@ -159,7 +159,7 @@
 										    complex, nonlinear dependencies on each other, doing this can be very difficult.</p>
 									
 									    <p>I've contributed to projects that address this problem by incorporating biological knowledge 
-										    into models directly in the form of ontologies, which are knowledge graphs that specifify
+										    into models directly in the form of ontologies, which are knowledge graphs that specify
 										    the hierarchical relationships / dependencies between traits. </p>
 
 								 	    <a href='https://besjournals.onlinelibrary.wiley.com/doi/full/10.1111/2041-210X.14210' target='_blank' style='text-decoration:none;color:blue;'>The RPhenoscate Paper</a> 
