--- a/Goodreads.html
+++ b/Goodreads.html
@@ -51,9 +51,9 @@
 												<li><a href="index.html">Home</a></li>
 											        <li><a href="Research.html">Research</a></li>
 												<li><a href="Publications.html">Publications</a></li>
-												<li class="current_page_item"><a href="Software.html">Software</a></li>
+												<li><a href="Software.html">Software</a></li>
 												<li><a href="pdfs/CV_website.pdf">CV</a></li>
-												<li><a href="Goodreads.html" target="_blank">GoodReads</a></li>
+												<li class="current_page_item"><a href="Goodreads.html">GoodReads</a></li>
 											</ul>
 										</nav>
 
