--- a/Research.html
+++ b/Research.html
@@ -109,8 +109,7 @@
                                     <div>
                                         <h3>Automated Character Construction with Deep Learning</h3>
                                                                         <p></p>
-									    <p>Using Knowledge-Guided Machine Learning (KGML) approaches, 
-										    While deep learning models can fit functions to any sort of data, they still always include inductive 
+									    <p> While deep learning models can fit functions to any sort of data, they still always include inductive 
 										    assumptions about how that data behaves / the processes that led to it being what it is. When dealing 
 										    with images, convolutional neural networks allow us to incorporate biases about the spatial distribution 
 										    of patterns. When dealing with time-series data, LSTMs allow us to incorporate biases about the order of 
