add the GoodReads link

--- a/Goodreads.html
+++ b/Goodreads.html
@@ -70,7 +70,7 @@
                 </li>
 
                 <li class="menu-item current-menu-item">
-                  <a href="GoodReads.html">GoodReads</a>
+                  <a href="https://github.com/calcharp/GoodReads" target="_blank">GoodReads</a>
                 </li>
               </ul>
             </div>
