--- a/Research.html
+++ b/Research.html
@@ -57,7 +57,7 @@
                            <a href="CV.html">CV</a>
                         </li>
                         <li class="menu-item">
-                           <a href="GoodReads.html">GoodReads</a>
+                           <a href="https://github.com/calcharp/GoodReads" target="_blank">GoodReads</a>
                         </li>
                      </ul>
                   </div>
