--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
                                         <div class="row flex-v-align">
                                             <div class="col-sm-12 col-md-5 col-lg-5">
                                                 <div class="home-photo">
-                                                    <div class="hp-inner" style="background-image: url(./img/main_photo.jpg);">
-                                                    </div>
+                                                    <div class="hp-inner" style="background-image: url(./img/main_photo.jpg);"></div>
                                                 </div>
                                             </div>
                                             <div class="col-sm-12 col-md-7 col-lg-7">
